[package]
name = "librustzeos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustzeos"
path = "src/rustzeos.rs"
#crate-type = ["staticlib"]     # this line causes an error if lib used in rust. it is needed to create FFI C lib


#[build]
#rustflags = ["-C opt-level=0"]

[dependencies]
#bellman = "0.1"     # those 2 are different! => MPC
#bellman = "0.10"    # those 2 are different! => stand alone
bellman = { version = "0.10.0", path = "../bellman" }
zeos_proofs = { version = "0.1.0", path = "../zeos_proofs" }
#pairing = "0.14"
#bincode = "1.3"
#blake2b_simd = "0.5"
blake2s_simd = "0.5"
bls12_381 = { version = "0.5" }
ff = { version = "0.10.1" }
rand = "0.8.4"
pairing = { version = "0.20.0" }
sha2 = "0.9.5"
x25519-dalek = "1.1.1"
curve25519-dalek = "3.2.0"
rand_core = "0.5.0"
aes = "0.7.5"
# MPC
phase2 = "0.2.1"
byteorder = "1"
base64 = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
libc = "0.2.101"

