[package]
name = "testzeos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "test_bellman"
path = "src/test_bellman.rs"
[[bin]]
name = "test_blake2s"
path = "src/test_blake2s.rs"
[[bin]]
name = "test_zeos"
path = "src/test_zeos.rs"
[[bin]]
name = "test_encrypt"
path = "src/test_encrypt.rs"
[[bin]]
name = "test_base64"
path = "src/test_base64.rs"
[[bin]]
name = "test_librustzeos"
path = "src/test_librustzeos.rs"

# MPC
#[[bin]]
#name = "new"
#path = "src/new.rs"

[build]
rustflags = ["-C opt-level=0"]

[dependencies]
#bellman = "0.1"     # those 2 are different! => MPC
#bellman = "0.10"    # those 2 are different! => stand alone
bellman = { version = "0.10", path = "../bellman" }
zeos_proofs = { version = "0.1.0", path = "../zeos_proofs" }
librustzeos = { version = "0.1.0", path = "../librustzeos" }
#pairing = "0.14"
#bincode = "1.3"
#blake2b_simd = "0.5"
blake2s_simd = "0.5"
bls12_381 = { version = "0.5" }
ff = { version = "0.10.1" }
rand = "0.8.4"
pairing = { version = "0.20.0" }
sha2 = "0.9.5"
x25519-dalek = "1.1.1"
curve25519-dalek = "3.2.0"
rand_core = "0.5.0"
aes = "0.7.5"
# MPC
phase2 = "0.2.1"
byteorder = "1"
base64 = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
libc = "0.2.101"

#[dependencies.pairing]
#path = "../pairing"
#version = "0.20.0"
#version = "0.14.2"
#features = ["expose-arith"]
